--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <!--Administrador del negocio-->
-                                <li><a href="mantener_categoria.html">Categorías de eventos</a></li>
+                                <li><a href="@Url.Action("Index", "Categoria")">Categorías de eventos</a></li>
                                 <li><a href="@Url.Action("Index", "Empleado")">Empleados</a></li>
                                 <li><a href="@Url.Action("Index", "PuntoVenta")">Puntos de venta</a></li>
                                 <li><a href="@Url.Action("Index", "Regalo")">Regalos</a></li>
