--- a/WebApplication4/WebApplication4/Views/Promocion/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Promocion/Index.cshtml
@@ -23,7 +23,7 @@
     <div class="row form-group">
         <label for="idEvento" class="control-label col-md-4">ID Evento:</label>
         <div class="col-md-8">
-            <input type="text" class="form-control" placeholder=@idEvento disabled>
+            <input id="eventoP" type="text" class="form-control" value=@idEvento disabled>
         </div>
     </div>
 
@@ -38,6 +38,7 @@
         <div class="col-md-10 col-sm-6 col-xs-6">
             <a class="btn btn-primary" href="#nuevaPromocion" data-toggle="modal">Agregar Cantidad<span class="glyphicon glyphicon-plus"></span></a>    
             <a class="btn btn-primary" href="#nuevaPromocion2" data-toggle="modal">Agregar Tarjeta<span class="glyphicon glyphicon-plus"></span></a> 
+            <a class="btn btn-primary" data-toggle="modal" onclick="borrar()">Borrar<span class="glyphicon glyphicon-plus"></span></a>
         </div>
 
         <div class="col-md-2 col-sm-6 colxs-6">
@@ -86,12 +87,34 @@
             var element = document.getElementsByClassName("trselected");
             //element.item[0].cells[0].innerText;
             element[0].className = "";            
-            ViewData["Prueba"] = element[0].cells[0].innerText;
-            ViewBag.Name = element[0].cells[1].innerText;
         }
+        //var tabla = document.getElementById("mytable");
+        //alert(x);
+        //var y = x.getCells();
+        var elem = document.getElementById("idPromocionT");
+        elem.value = x.cells[0].innerHTML;
+        //alert(x.cells[0].innerHTML);
+        //ViewBag.P = x.cells[0].innerHTML;
         x.className = "trselected";
+
         //<a class="btn btn-primary" href="javascript:document.getElementsByClassName('trselected').submit()">Borrar<span class="glyphicon glyphicon-pencil"></span></a>
-        idProm = x.codp;
+        //idProm = x.codp;
+    }
+    function borrar() {
+        var evento = $('#eventoP').val();
+        var promocion = $('#idPromocionT').val();
+        //alert(evento);
+        //alert(promocion);
+        $.ajax({
+            url: "@Url.Action("Delete","Promocion")",
+            data: { evento: evento, promocion:promocion },
+        success: function (data) {
+            alert("Eliminado");
+        },
+        error: function () {
+            alert("Error :(");
+        }
+    });
     }
 </script>
 
