--- a/WebApplication4/WebApplication4/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_LoginPartial.cshtml
@@ -18,7 +18,7 @@
                 <!--contenido de la ventana modal-->
                 <div class="modal-body">
                     <section id="loginForm">
-                        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" ,id ="formita"}))
                         {
                             @Html.AntiForgeryToken()
                                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
