--- a/WebApplication4/WebApplication4/Views/Promocion/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Promocion/Index.cshtml
@@ -4,8 +4,7 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
-    var idProm=0;
-    int idEvento = 1;
+    int idEvento = int.Parse(ViewBag.idEvento);
 }
 
 <div class="container-fluid">
@@ -30,7 +29,7 @@
     <div class="row form-group">
         <label for="nombreEvento" class="control-label col-md-4">Nombre Evento:</label>
         <div class="col-md-8">
-            <input type="text" class="form-control" placeholder="Circo Kiko" disabled>
+            <input type="text" class="form-control" placeholder="@ViewBag.nombreEvento" disabled>
         </div>
     </div><br><br>
 
