Añadida la vista de asientos

--- a/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
@@ -441,7 +441,7 @@
             if (!isNaN(depId)) {
                 var ddProv = $("#idProv");
                 ddProv.empty();
-                ddProv.append($("<option></option>").val("").html("--Provincia--"));
+                //ddProv.append($("<option></option>").val("").html("--Provincia--"));
                 $.ajax({
                     url: "Provincia",
                     data: { depId: depId },
