--- a/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
@@ -16,13 +16,13 @@
             <div class="form-group">
                 <a class="btn btn-primary" href="@Url.Action("Register","Evento")">Nuevo <span class="glyphicon glyphicon-plus"></span></a>
                 <a class="btn btn-primary" href="modificar_evento.html">Modificar <span class="glyphicon glyphicon-pencil"></span></a>
-                <a class="btn btn-primary" href="asientos.html">Asientos <span class="glyphicon glyphicon-equalizer"></span></a>
+                <a class="btn btn-primary" onclick="redirigeAsiento()">Asientos <span class="glyphicon glyphicon-equalizer"></span></a>
             </div>
         </div>
         <div class="col-md-6 col-sm-12">
             <div class="form-group">
                 @Html.Hidden("idEventoT")
-                <a class="btn btn-primary" onclick="redirige()">Agregar Promoción <span class="glyphicon glyphicon-tags"></span></a>
+                <a class="btn btn-primary" onclick="redirigePromocion()">Agregar Promoción <span class="glyphicon glyphicon-tags"></span></a>
                 <a class="btn btn-primary" href="reservar_organizador.html">Reservar Entradas <span class="glyphicon glyphicon-flag"></span></a>
                 <a class="btn btn-warning" href="postergar_evento.html">Postergar <span class="glyphicon glyphicon-calendar"></span></a>
                 <a class="btn btn-warning" href="cancelar_evento.html">Cancelar <span class="glyphicon glyphicon-remove-sign"></span></a>
@@ -155,9 +155,23 @@
         elem.value = x.cells[0].innerHTML;
         x.className = "trselected";
     }
-    function redirige() {
+    function redirigePromocion() {
         var evento = $('#idEventoT').val();
-        window.location.href = '/Promocion/Index?evento=' + evento;
+        if (evento != "") {
+            window.location.href = '/Promocion/Index?evento=' + evento;
+        } else {
+            alert("Seleccione un evento");
+            evento = "";
+        }
+    }
+    function redirigeAsiento() {
+        var evento = $('#idEventoT').val();
+        if (evento != "") {
+            window.location.href = '/Evento/Asientos?evento=' + evento;
+        } else {
+            alert("Seleccione un evento");
+            evento = "";
+        }
     }
 </script>
 
