una mejor manera para lo del combobox es tener un controlador de servicios, para no estar agregando la vista en el controlador que esten usando. para no repetir codigo nomas xd

--- a/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
@@ -443,7 +443,7 @@
                 ddProv.empty();
                 //ddProv.append($("<option></option>").val("").html("--Provincia--"));
                 $.ajax({
-                    url: "Provincia",
+                    url: "@Url.Action("Provincia","Services")",
                     data: { depId: depId },
                     datatype: "json",
                     success: function (data) {
