--- a/WebApplication4/WebApplication4/Views/Evento/Asientos.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Asientos.cshtml
@@ -7,6 +7,7 @@
 <html lang="es">
 
 <body>
+    <link href="~/Views/css/asientos.css" rel="stylesheet" />
     <div class="container-fluid">
         <div class="col-md-5">
             <ol class="breadcrumb">
@@ -30,19 +31,6 @@
             </div>
         </div>
     </div>
-    <style>
-        #aux {
-            background-color: lightgray;
-            border: 1px solid black;
-            height: 50px;
-        }
-
-        #canvas {
-            border: 1px solid black;
-            height: 700px;
-        }
-    </style>
-
     <div id="cont" class="container">
         <div class="row form-group">
             <select class="form-control" name="" id="">
