Register - formato de bloque de tiempo de venta nuevo

--- a/WebApplication4/WebApplication4/Views/Evento/Asientos.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Asientos.cshtml
@@ -33,6 +33,7 @@
     </div>
     <div id="cont" class="container">
         <div class="row form-group">
+            @*Sacar las zonas del evento*@
             <select class="form-control" name="" id="">
                 <option value="">VIP</option>
                 <option value="">GENERAL</option>
